test/app_deployment_test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-cluster-ip
spec:
  ports:
  - port: 80
    protocol: TCP
#    targetPort: 3000
    targetPort: 80
  selector:
    app: kubernetes-tutorial-deployment
  type: ClusterIP
